# sheaf-spectral

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: connection.rs  diffusion.rs  graph.rs  hodge.rs  laplacian.rs  lib.rs  neural.rs  persistent.rs  sheaf.rs  synchronization.rs
