[package]
name = "sheaf-spectral"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/sheaf-spectral"
description = "Spectral sheaf theory in Rust — sheaf Laplacian, spectral sheaf theory, diffusion on sheaves, cohomology"
readme = "README.md"
keywords = ["sheaf", "spectral", "graph", "cohomology", "laplacian"]
categories = ["mathematics", "science"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
